# spectral-representations

./: .gitignore  LICENSE  README.md  pyproject.toml  requirements.txt
evaluation/: figure1.py  figure2.py  figure3.py  supplementary_figure1.py
evaluation/additional_data/: stringer.npy
evaluation/includes/: color_grad.py  lab_colormap.py
evaluation/layer_step_experiments/: plot_all_spectra_grid_deep.py  plot_all_spectra_grid_deep_MNIST_relu.py  plot_all_spectra_grid_deep_cifar10.py  plot_all_spectra_grid_deep_cifar10_relu.py
evaluation/layer_step_experiments/includes/: plot_spectra.py  plot_step.py
evaluation_new/: error_function.py
spectral_representations/: attacks.py  callbacks.py
spectral_representations/includes/: color_grad.py  draw.py  filter_data.py  net_helpers.py
spectral_representations/regularizer/: dimension_reg_layer.py  spectral_slope.py
spectral_representations/resnet/: parse_log.py  resnet.py  resnet_definition.py  resnet_load_data.py  run.py
training/: run.py  train.py
training/includes/: attacks.py  callbacks.py  dimension_reg_layer.py  logging.py  spectral_slope.py
training/logs_cedar_2022-10-25/: rm.py
